--- a/style.css
+++ b/style.css
@@ -70,10 +70,10 @@ h2::first-letter {
     background-color: var(--salmon-nav);
 }
 
-.btn-primary {
+/* .btn-primary {
     background-color: var(--peacock);
     border-color: var(--peacock);
-}
+} */
 
 .btn-primary:hover {
     background-color: var(--salmon-wave);
